# barc4shadow

./: README.md  pyproject.toml
src/barc4shadow/: __init__.py  beamline.py  viz.py
